[package]
name = "diskutil"
version = "0.1.0"
authors = ["Artur Kowalski <arturkow2000@gmail.com>"]
edition = "2018"

[[bin]]
name = "vhdinfo"
path = "src/bin/vhdinfo.rs"

[[bin]]
name = "vhd2bin"
path = "src/bin/vhd2bin.rs"

[[bin]]
name = "mkvhd"
path = "src/bin/mkvhd.rs"

[[bin]]
name = "bin2vhd"
path = "src/bin/bin2vhd.rs"

[[bin]]
name = "gpt"
path = "src/bin/gpt.rs"

[dependencies]
bitflags = "1.2.1"
derivative = "2.1.1"
byteorder = "1.3.4"
chrono = "0.4.13"
clap = "2.33.1"
fern = { version = "0.6", features = ["colored"] }
log = "0.4"
crc = "1.8.1"
better-panic = "0.2.0"

[dependencies.uuid]
version = "0.8.1"
features = ["v4"]