[package]
name = "diskutil"
version = "0.1.0"
authors = ["Artur Kowalski <arturkow2000@gmail.com>"]
edition = "2018"

[[bin]]
name = "vhdinfo"
path = "src/bin/vhdinfo.rs"

[[bin]]
name = "vhd2bin"
path = "src/bin/vhd2bin.rs"

[[bin]]
name = "mkvhd"
path = "src/bin/mkvhd.rs"

[[bin]]
name = "bin2vhd"
path = "src/bin/bin2vhd.rs"

[[bin]]
name = "gpt"
path = "src/bin/gpt.rs"

[[bin]]
name = "fat"
path = "src/bin/fat.rs"

[dependencies]
thiserror = "1"
bitflags = "1"
byteorder = "1"
chrono = "0.4"
clap = "3.0.0-beta.4"
fern = { version = "0.6", features = ["colored"] }
log = "0.4"
crc = "1"
better-panic = "0.2"
fatfs = { git = "https://github.com/rafalh/rust-fatfs", rev = "1415756c41a3e1b2e6596b283d4c55c82a9378b4", features = ["std"] }
uuid_macros = { path = "uuid_macros" }

[dependencies.uuid]
version = "0.8"
features = ["v4"]